<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>

    <string name="dark_Theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="arrow_forward">Пользовательское соглашение</string>

    <string name="message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="link_to_the_course">https://practicum.yandex.ru/android-developer/</string>
    <string name="email_developer">putilov0407@gmail.com</string>
    <string name="link_to_the_offer">https://yandex.ru/legal/practicum_offer/</string>

    <string name="nothing_found">Ничего не нашлось</string>
    <string name="communications_problem1">Проблемы со связью</string>
    <string name="communications_problem2">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh_button">Обновить</string>
    <string name="clear_history">Очистить историю</string>
    <string name="you_search">Вы искали</string>

    <string name="artwork">Обложка альбома</string>
    <string name="track_time">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="duration_start">00:00</string>

    <string name="nothing_media">Ваша медиатека пуста</string>

    <string name="nothing_playlist">Вы не создали ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favorite_track">Избранные треки</string>
    <string name="playlist">Плейлист</string>
    <string name="button_create">Создать</string>
    <string name="name_playlist">Название*</string>
    <string name="description_playlist">Описание</string>

    <string name="dialog_exiting_playlist_creation">Завершить создание плейлиста?</string>
    <string name="dialog_loss_of_data">Все несохраненные данные будут потеряны</string>
    <string name="dialog_cancel">Отмена</string>
    <string name="dialog_complete">Завершить</string>
    <string name="created">создан</string>
    <string name="rationale_permission">Разрешение на доступ к файлам необходим для выбора обложки альбома.</string>
    <string name="denied_permanently_permission">Разрешение на доступ к файлам запрещено.
        Для включения разрешения необходимо перейти в настройки.</string>
    <string name="_0_tracks">0 треков</string>
    <string name="_5_20_tracks">треков</string>
    <string name="_1_track">трек</string>
    <string name="_2_4_track">трека</string>
    <string name="add_playlist">Добавить в плейлист</string>
    
    <string name="_0_minutes">0 минут</string>
    <string name="_5_20_minutes">минут</string>
    <string name="_1_minutes">минута</string>
    <string name="_2_4_minutes">минуты</string>

    <string name="trackOnPlaylist">Трек уже добавлен в плейлист</string>
    <string name="trackAddOnPlaylist">Добавлено в плейлист</string>

    <string name="delete_track">Хотите удалить трек?</string>
    <string name="delete_playlist_message">Хотите удалить плейлист?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="empty_playlist">Плейлист пуст</string>
    <string name="no_track_in_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share_playlist">Поделиться</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>
    <string name="name_playlist_newplaylist">Название*</string>
    <string name="description_playlist_newplaylist">Описание</string>
</resources>