<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/Theme.PlaylistMaker"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout style="@style/panel_header">
        <Button
            android:id="@+id/buttonArrowBackSettings"
            style="@style/button_arrowBack_panel_header"/>
        <TextView
            android:text="@string/settings"
            style="@style/text_panel_header"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/dark_Theme"
            style="@style/TextViewSettings" />

        <Switch
            style="@style/ImageViewSettings"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/share"
            style="@style/TextViewSettings"/>

        <ImageView
            android:id="@+id/share"
            android:src="@drawable/ic_share"
            style="@style/ImageViewSettings"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/TextViewSettings"
            android:text="@string/support"/>

        <ImageView
            android:id="@+id/support"
            android:src="@drawable/ic_support"
            style="@style/ImageViewSettings"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/TextViewSettings"
            android:text="@string/arrow_forward"/>

        <ImageView
            android:id="@+id/user_agreement"
            android:src="@drawable/ic_arrow_forward"
            style="@style/ImageViewSettings"/>
    </FrameLayout>
</LinearLayout>