<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_screen"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size"
            android:paddingBottom="24dp"/>

    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="@dimen/button_weight"
        android:backgroundTint="@color/white"
        android:text="@string/search"
        android:textColor="@color/black_blue"
        android:inputType="textCapSentences"
        android:textSize="@dimen/text_size"
        android:foreground="?attr/selectableItemBackground"
        app:icon="@drawable/ic_search"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_for_text"
        app:iconTint="@color/black_blue"
        app:cornerRadius="@dimen/button_radius"
        />

    <Button
        android:id="@+id/buttonMedia"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="@dimen/button_weight"
        android:backgroundTint="@color/white"
        android:text="@string/media"
        android:textColor="@color/black_blue"
        android:inputType="textCapSentences"
        android:textSize="@dimen/text_size"
        android:foreground="?attr/selectableItemBackground"
        app:icon="@drawable/ic_media"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_for_text"
        app:iconTint="@color/black_blue"
        app:cornerRadius="@dimen/button_radius"
        tools:ignore="TextViewEdits"/>

    <Button
        android:id="@+id/buttonSettings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="@dimen/button_weight"
        android:backgroundTint="@color/white"
        android:text="@string/settings"
        android:textColor="@color/black_blue"
        android:inputType="textCapSentences"
        android:textSize="@dimen/text_size"
        android:foreground="?attr/selectableItemBackground"
        app:icon="@drawable/ic_settings"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_for_text"
        app:iconTint="@color/black_blue"
        app:cornerRadius="@dimen/button_radius"
        tools:ignore="TextViewEdits"/>
</LinearLayout>