<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/fragmentPlaylist"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:theme="@style/Theme.PlaylistMaker"
    tools:context="com.practicum.playlistmaker.newplaylist.ui.fragment.NewPlaylistFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/gg"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/constraintGuide_16" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/constraintGuide_16" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/cover_bottom_guideline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.48" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_info_bottom_guideline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_info_guideline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.65" />

        <ImageView
            android:id="@+id/cover_playlist"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder_playlist"
            app:layout_constrainedHeight="true"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toTopOf="@id/name_playlist" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarPlaylist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_arrow_back_playlist" />

        <TextView
            android:id="@+id/name_playlist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintBottom_toTopOf="@id/description_playlist"
            app:layout_constraintHorizontal_bias="0"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_24"
            android:fontFamily="@font/ys_display_medium"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintTop_toBottomOf="@id/cover_playlist"
            tools:text="Название плейлиста" />

        <TextView
            android:id="@+id/description_playlist"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/name_playlist"
            app:layout_constraintBottom_toTopOf="@id/total_time_and_quantity"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_18"
            android:fontFamily="@font/ys_text_regular"
            android:maxLines="1"
            android:ellipsize="end"
            app:layout_constraintHorizontal_bias="0"
            tools:text="Описание плейлиста" />

        <LinearLayout
            android:id="@+id/total_time_and_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/description_playlist"
            app:layout_constraintBottom_toTopOf="@id/share_and_more"
            app:layout_constraintHorizontal_bias="0">

            <TextView
                android:id="@+id/total_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_18"
                android:fontFamily="@font/ys_text_regular"
                android:maxLines="1"
                android:ellipsize="end"
                tools:text="300 минут"
                android:layout_gravity="center"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_ellipse"
                android:layout_margin="@dimen/marginEllipseTrack"
                android:layout_gravity="center"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/total_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_18"
                android:fontFamily="@font/ys_text_regular"
                android:maxLines="1"
                android:ellipsize="end"
                tools:text="100 треков"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/share_and_more"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_16"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/total_time_and_quantity"
            app:layout_constraintBottom_toTopOf="@id/bottom_info_guideline"
            app:layout_constraintHorizontal_bias="0">

            <ImageView
                android:id="@+id/share"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_share"
                app:tint="@color/black" />

            <ImageView
                android:id="@+id/more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_more" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/corner_rectangle_bottomsheet"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/padding_text"
        android:paddingStart="@dimen/margin_16"
        android:paddingEnd="@dimen/margin_16"
        app:behavior_hideable="false"
        app:behavior_peekHeight="240dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounder" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/playlist_empty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_bottom_54"
                android:fontFamily="@font/ys_text_regular"
                android:gravity="center_horizontal"
                android:text="@string/empty_playlist"
                android:textColor="?attr/snackbar_text"
                android:textSize="@dimen/text_size_18"
                android:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerTracks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="5"
                tools:listitem="@layout/track_view" />
        </FrameLayout>
    </LinearLayout>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/bottom_sheet_more"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/corner_rectangle_bottomsheet"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounder" />

        <include
            android:id="@+id/info_playlist_more"
            layout="@layout/playlist_view_on_player"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_share_playlist"
            style="@style/button_info_playlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share_playlist" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_edit_playlist"
            style="@style/button_info_playlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_playlist" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_delete_playlist"
            style="@style/button_info_playlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_playlist" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>